# restic-k8s

./: .gitignore  .gitmodules  Containerfile  README.md  pyproject.toml  requirements.txt  restic-k8s.py  restic_k8s.py  test_restic_k8s.py
.github/workflows/: container-build.yaml  e2e-tests-bats.yml  helm-chart.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  backup-cronjob.yaml  check-cronjob.yaml  config.yaml  debug-toolbox.yaml  forget-cronjob.yaml  prune-cronjob.yaml
e2e-tests/: 01_basic.bats  deploy-minio.sh  prune-minio.sh  undeploy-minio.sh
e2e-tests/fixtures/: app.yaml  index.html
